--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.11) bionic; urgency=medium
+
+  * Fixed epi script to use pkexec
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 18 Oct 2018 12:22:03 +0200
+
 zero-lliurex-jclic-biblio (0.10) bionic; urgency=medium
 
   * Initial release to bionic
