--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.12) bionic; urgency=medium
+
+  * Changed adm group by sudo 
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 05 Mar 2019 15:29:48 +0100
+
 zero-lliurex-jclic-biblio (0.11) bionic; urgency=medium
 
   * Fixed epi script to use pkexec
