--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.14) bionic; urgency=medium
+
+  * Adding new version to Mestre a casa 18.1 
+
+ -- Daniel Duran <daduve@gmail.com>  Wed, 28 Oct 2020 15:57:43 +0100
+
 zero-lliurex-jclic-biblio (0.13) bionic; urgency=medium
 
   * Added custom icon to show in epi
