--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.24) focal; urgency=medium
+
+  * Initial release for focal
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 12 Feb 2021 12:07:21 +0100
+
 zero-lliurex-jclic-biblio (0.14) bionic; urgency=medium
 
   * Adding new version to Mestre a casa 18.1 
