--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.24.1) focal; urgency=medium
+
+  * Remove old dependency
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Fri, 12 Feb 2021 18:50:49 +0100
+
 zero-lliurex-jclic-biblio (0.24) focal; urgency=medium
 
   * Initial release for focal
