--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.24.2) focal; urgency=medium
+
+  * Fixed zero app file
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 25 May 2021 18:03:40 +0200
+
 zero-lliurex-jclic-biblio (0.24.1) focal; urgency=medium
 
   * Remove old dependency
