--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.24.3) focal; urgency=medium
+
+  * Added custom name in epi file
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 16 Jun 2021 14:41:54 +0200
+
 zero-lliurex-jclic-biblio (0.24.2) focal; urgency=medium
 
   * Fixed zero app file
