Updated changelog. Fixed app file

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.14.2) bionic-updates; urgency=medium
+
+  * Changed value of service key in app file
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 22 Jun 2021 13:55:20 +0200
+
 zero-lliurex-jclic-biblio (0.14.1) bionic-updates; urgency=medium
 
   * Added custom name in epi file
