--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.14.3) bionic; urgency=medium
+
+  * fixed www from url
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Thu, 02 Mar 2023 11:50:26 +0100
+
 zero-lliurex-jclic-biblio (0.14.2) bionic-updates; urgency=medium
 
   * Changed value of service key in app file
