--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+zero-lliurex-jclic-biblio (0.14.4) bionic; urgency=medium
+
+  * Fixed script to install in macrolan
+  * Fixed script to install in desktop using epic
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 29 Mar 2023 17:23:57 +0200
+
 zero-lliurex-jclic-biblio (0.14.3) bionic; urgency=medium
 
   * fixed www from url
