--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+zero-lliurex-jclic-biblio (0.34.7) jammy; urgency=medium
+
+  * Fixed installation with CDC user
+  * Enable installation for students
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 26 Apr 2024 13:03:44 +0200
+
 zero-lliurex-jclic-biblio (0.34.6) jammy; urgency=medium
 
   * Initial release for Jammy
