--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.35.0) jammy; urgency=medium
+
+  * Adding Profile file to generate link in user home.
+
+ -- Daniel Duran <daduve@gmail.com>  Thu, 16 May 2024 09:49:30 +0200
+
 zero-lliurex-jclic-biblio (0.34.7) jammy; urgency=medium
 
   * Fixed installation with CDC user
