Updated changelog. Initial release for noble

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.45.1) noble; urgency=medium
+
+  * Initial release for noble
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 20 Sep 2024 13:15:36 +0200
+
 zero-lliurex-jclic-biblio (0.35.1) jammy; urgency=medium
 
   * New advertise timeout 
