--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.45.2) noble; urgency=medium
+
+  * Hide installation from Zero-Center.
+
+ -- Daniel Duran <daduve@gmail.com>  Fri, 02 May 2025 10:30:40 +0200
+
 zero-lliurex-jclic-biblio (0.45.1) noble; urgency=medium
 
   * Initial release for noble
