--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.45.3) noble; urgency=medium
+
+  * Fixed script to show last msg
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 13 May 2025 11:32:54 +0200
+
 zero-lliurex-jclic-biblio (0.45.2) noble; urgency=medium
 
   * Hide installation from Zero-Center.
