--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-jclic-biblio (0.35.2) jammy; urgency=medium
+
+  * Fixed script to show msg
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 13 May 2025 11:41:08 +0200
+
 zero-lliurex-jclic-biblio (0.35.1) jammy; urgency=medium
 
   * New advertise timeout 
